Tell composer to support php 5.3.3.
Downgrades symfony components, so now there's a chance this might
actually work on the server. We can but dream.

--- a/composer.json
+++ b/composer.json
@@ -42,5 +42,10 @@
         "psr-0": { "" : "src/" }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "platform": {
+            "php": "5.3.3"
+        }
+    }
 }
