Use neon file format for configuration.
http://ne-on.org/

--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         }
     ],
     "require": {
+        "nette/neon": "*",
         "guzzle/guzzle": "*",
         "symfony/process": "*",
         "symfony/console": "*",
