--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,23 @@
         {
             "type": "package",
             "package": {
-                 "name": "redbeanphp",
-                 "version": "4.0.4",
+                 "name": "redbeanphp/redbeanphp",
+                 "version": "4.2.1",
                  "dist": {
-                     "url": "http://www.redbeanphp.com/downloadredbean.php",
-                     "type": "tar"
+                     "url": "https://github.com/gabordemooij/redbean/archive/v4.2.1.zip",
+                     "type": "zip"
                  }
             }
         }
     ],
+    "scripts": {
+        "post-install-cmd": [
+           "cd vendor/redbeanphp/redbeanphp/ && php replica2.php onlyphp && php p533patch.php"
+        ],
+        "post-update-cmd": [
+           "cd vendor/redbeanphp/redbeanphp/ && php replica2.php onlyphp && php p533patch.php"
+        ]
+    },
     "authors": [
         {
             "name": "Daniel James",
@@ -26,10 +34,10 @@
         "symfony/process": "*",
         "symfony/console": "*",
         "symfony/monolog-bridge": "*",
-        "redbeanphp": "4.0.*"
+        "redbeanphp/redbeanphp": "4.2.*"
     },
     "autoload": {
-        "files": [ "vendor/redbeanphp/rb.php", "src/_init.php" ],
+        "files": [ "vendor/redbeanphp/redbeanphp/rb-p533.php", "src/_init.php" ],
         "psr-0": { "" : "src/" }
     },
     "minimum-stability": "dev",
