Separate mirror script.
Using c9s/GetOptionKit to parse command line arguments. Not great so
far, but it'll do. I wanted to use something fairly standalone.

--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         }
     ],
     "require": {
+        "corneltek/getoptionkit": "*",
         "nette/neon": "*",
         "guzzle/guzzle": "*",
         "symfony/process": "*",
