Use Nette\Object as base of many classes.
It adds stricter error checking for accessing object members. Has some
other features as well, including a property implementation but I'm not
using them (yet?).

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
     "require": {
         "corneltek/getoptionkit": "*",
         "nette/neon": "*",
+        "nette/utils": "*",
         "guzzle/guzzle": "*",
         "symfony/process": "*",
         "redbeanphp/redbeanphp": "4.2.*",
