Add simplexml to test config

--- a/tests/config/php-coverage.ini
+++ b/tests/config/php-coverage.ini
@@ -3,5 +3,6 @@ extension=json.so
 extension=pdo.so
 extension=pdo_mysql.so
 extension=pdo_sqlite.so
+extension=simplexml.so
 zend_extension=xdebug.so
 zend_extension=/opt/local/lib/php54/extensions/no-debug-non-zts-20100525/xdebug.so
